--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -53,8 +53,8 @@
 <div class="body2">
   <div class="bodytext">
     <div class="alignleft">
-      <h2>THE HOME OF PERFECT LIPS.</h2>
-      <h3>Entrümpelungen in Berlin und Brandenburg</h3>
+      <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>
+      <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
       <p>
         Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your pout to perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic in Harley Street is the place to be seen (or not, should you prefer to opt for our ultra discrete at home VIP service).
       </p>
@@ -89,14 +89,14 @@
 
   </div>
     <div class="centerbody">
-      <h2>BIGGER ISN’T ALWAYS BETTER.</h2>
+      <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
       <br>
 
       <img src="assets/images/woman.png" width="600" height="400">
       <br>
       <br>
       <br>
-      <h2> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+      <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
       <br>
       <p>
         All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
@@ -108,13 +108,13 @@
 <br>
 <br>
       <div class="naturalborder">
-      <h2> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>
+      <h2 class="colour1"> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>
 
-      <h2> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+      <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
       <p>
         Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
       </p>
-      <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+      <h3 class="colour1"> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
       </div>
     </div>
   <div class="body3">
@@ -152,8 +152,8 @@
 
     <div class="alignright3">
       <div class="bodytext2">
-        <h4>BABAS DIENSTLEISTUNGEN</h4>
-        <h2>EXPERTISE COUNTS FOR EVERYTHING.</h2>
+        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
+        <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>
         <p>
           A prescriber, Member of the Royal Pharmaceutical Society and advanced aesthetics practitioner, Rupesh has spent the last 10 years focusing primarily on the care and wellbeing of his aesthetics patients, with lip fillers London being at the core of his attention. In this time he has crafted an enviable reputation as the greatest Lip Injector in London, and his strong celebrity following along with an International appeal for VIP patients is a testament to his expertise.
         </p>
@@ -164,8 +164,8 @@
 
     <div class="alignleft3">
       <div class="bodytext2">
-        <h4>BABAS DIENSTLEISTUNGEN</h4>
-        <h2>Entrümpelung Berlin – faire und transparente Preise</h2>
+        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
+        <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
         <p>Abhängig von der Größe der Wohnung oder des Hauses können die Kosten der Entrümpelung in Berlin erheblich variieren. Darüber hinaus muss auch der Größe und der Art der zu entsorgenden Möblierung Beachtung geschenkt werden, denn ein wichtiger Teil der Entrümpelung ist auch die Entsorgung der nicht mehr benötigten Gegenstände. Um Sie richtig über die Kosten zu informieren, erstellen wir Ihnen erst nach einer Vor-Ort Besichtigung die Rechnung. So können Sie sich sicher sein, dass unsere Preise für die Entrümpelung in Berlin stets transparent und somit nachvollziehbar sind. Noch Fragen? Gerne klären Sie unsere Fachberater über die Entrümpelung in Berlin auf und beraten Sie nach der Klärung aller offenen Fragen zu allen Entsorgungsfragen.</p>
       </div>
     </div>
