--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 <br>
 <br>
 <div class="centerbody">
+
   <h2>LIP FILLERS LONDON.</h2>
   <br>
   <img src="assets/icons/lipandface.png"  >
@@ -13,7 +14,6 @@
   <h3>LIP FILLER IS AN INCREDIBLY POPULAR CHOICE FOR ANYONE </h3>
   <br>
    <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
-
   <br>
   <p class="centertext">Rupesh says, “People tend to love having more shapely, voluminous, and well-defined lips. We must make sure we don’t go overboard with the lip filler process. So you might want to think about getting your first lip augmentation injections in two treatment rounds, not just one. A secondary follow-up LIP FILLER TOP-UP injection appointment would typically occur at the 2 to 3-week mark after the first round. This ensures that the lip filler injected initially has settled and this is no swelling or inflammation present. Your lips are fully healed and are ready for round 2. As an experienced practitioner, I carefully use just the right amount of filler to enhance lips and give a natural and subtle finish. ”</p>
   <br>
@@ -25,29 +25,34 @@
   <br>
   <img src="assets/images/boyali.png"  >
   <br>
-  <p class="centertext">Our Harley Street clinic is located in central London. Rupesh heads this clinic and is a highly specialised and experienced medical aesthetic practitioner who performs advanced lip augmentation injections using an advanced cannula technique on a regular basis.</p>
-  <p class="centertext">He has an interest in facial aesthetics, providing anti-wrinkle treatments and dermal fillers in his London private clinic.</p>
-  <p class="centertext">Rupesh Shah. Reg Number: 2048914</p>
-  <p class="centertext">Best Lip Fillers London 2021, London Lip Clinic London is in a central location close to Hyde Park, Belgravia, Kensington, South Kensington, Bayswater, Fulham, Holland Park, Green Park, Notting Hill. Chelsea, Soho, Knightsbridge,  Battersea, West End, Clapham,  Marylebone, Regents Park, St Johns Wood, Victoria,  Primrose Hill, Earls Court, Mayfair, and Fitzrovia.</p>
-  <br>
+  <div class="centertext">
+  <p>Our Harley Street clinic is located in central London. Rupesh heads this clinic and is a highly specialised and experienced medical aesthetic practitioner who performs advanced lip augmentation injections using an advanced cannula technique on a regular basis.</p>
+  <p>He has an interest in facial aesthetics, providing anti-wrinkle treatments and dermal fillers in his London private clinic.</p>
+  <p>Rupesh Shah. Reg Number: 2048914</p>
+  <p>Best Lip Fillers London 2021, London Lip Clinic London is in a central location close to Hyde Park, Belgravia, Kensington, South Kensington, Bayswater, Fulham, Holland Park, Green Park, Notting Hill. Chelsea, Soho, Knightsbridge,  Battersea, West End, Clapham,  Marylebone, Regents Park, St Johns Wood, Victoria,  Primrose Hill, Earls Court, Mayfair, and Fitzrovia.</p>
+
+  </div>
+    <br>
   <iframe width="600" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
   </iframe>
   <br><br>
   <br><br>
   <h3 class="centertext">WHAT IS LIP FILLER?</h3>
   <br><br>
-  <p class="centerright">
+  <div class="centerright">
+  <p>
     Lip fillers are made of hyaluronic acid which is a naturally occurring component of soft tissues. Lip fillers can be used to add volume to the red lip, increase definition, and treat vertical creases and wrinkles around the mouth.
   </p>
-  <p class="centerright">
+  <p>
     Lip cosmetic injections can be injected into the upper lip, the lower lip, or both. While small volumes of lip filler can give a nice subtle enhancement, overly aggressive use of fillers can look very unnatural.
   </p>
-  <p class="centerright">
+  <p>
     Your Lip filler consultation at our London Lip Clinic located at 8 Harley Street, London will begin with highly experienced Rupesh who will have a detailed discussion with you to understand your lip goals.  Once the consultation is complete, medical history and a series of before photos are taken.</p>
-  <p class="centerright">
+  <p>
 
     The best options for treatment for you given Lip Shape and size, and the results that you would likely achieve with each treatment
   </p>
+  </div>
 <!--  <li class="centerright">Coffee</li>-->
   <br>
   <br>
@@ -59,14 +64,19 @@
   <br>
   <h3 class="centerright">ARE LIP INJECTIONS SAFE?</h3>
   <br>
-
+<!--  <section id="thirdbehavior">-->
+<!--    <button mat-raised-button color="warn">Mehr erfahren</button>-->
+<!--  </section>-->
   <p class="centerright">
     The lip augmentation techniques used by Rupesh at London Lip Clinic are considered both safe and effective. Lip cosmetic injections are a safe and effective way to non surgically augment your lips. Because they are made from hyaluronic acid that is found naturally in the body, there is a very low chance of an allergic reaction. HA fillers do not require an allergy test.
   </p>
+
   <p class="centerright">
     The procedure is non-invasive and when performed by a qualified medical professional, there is little risk.
   </p>
+
   <br>
+
   <h3 class="centertext">FREQUENTLY ASKED QUESTIONS</h3>
   <br>
   <div class="centerright">
@@ -114,24 +124,22 @@
   </div>
 </div>
 
-<!--<mat-drawer-container class="example-container" autosize>-->
-<!--  <mat-drawer #drawer class="example-sidenav" mode="side">-->
-<!--    <p>ABOUT LIP FILLERS LONDON TREATMENT</p>-->
-<!--    <p>WHAT IS LIP FILLER?</p>-->
-<!--    <p>LIP FILLER RISKS AND SIDE EFFECTS</p>-->
-<!--    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>-->
-<!--    <button (click)="showFiller = !showFiller" mat-raised-button>-->
-<!--      Extra Information-->
-<!--    </button>-->
-<!--  </mat-drawer>-->
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>LIP FILLER RISKS AND SIDE EFFECTS</p>
+    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Extra Information
+    </button>
+  </mat-drawer>
 
-<!--  <div class="example-sidenav-content">-->
-<!--    <button type="button" mat-button (click)="drawer.toggle()">-->
-<!--      + PAGE CONTENT-->
-<!--    </button>-->
-<!--  </div>-->
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">
+      + PAGE CONTENT
+    </button>
+  </div>
 
-<!--</mat-drawer-container>-->
+</mat-drawer-container>
 
 <!--//-->
 <!--<div class="body1">-->
