--- a/src/app/thirdsection/thirdsection.component.css
+++ b/src/app/thirdsection/thirdsection.component.css
@@ -16,7 +16,7 @@
     max-width: 600px;
   }
 
-  
+
   section {
     display: table;
   }
@@ -60,4 +60,58 @@
       text-align: left;
   }
 
-  
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+}
+
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: white;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: white;
+  color: white;
+}
+
+.topnav-centered a {
+  float: none;
+  position: fixed;
+  background-color: white;
+  left: 47%;
+}
+
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+}
