--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -1,4 +1,20 @@
+<!--<div class="topnav">-->
+
+
+<!--    &lt;!&ndash; Centered link &ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="topnav-centered">&ndash;&gt;-->
+<!--&lt;!&ndash;      <a href="#home" class="active"> <img src="assets/icons/house.png"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+
+<!--</div>-->
 <div class="topbar">
+<!--  <div class="topnav">-->
+
+<!--    &lt;!&ndash; Centered link &ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="topnav-centered">&ndash;&gt;-->
+<!--&lt;!&ndash;      <a href="#home" class="active"> <img src="assets/icons/house.png"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--  </div>-->
 <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
 <!--  <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">-->
 <!--    <i class="fa fa-whatsapp my-float"></i>-->
@@ -36,7 +52,7 @@
 <!--  </div>-->
 <!--  </div>-->
 </div>
-
+</div>
 <!--<div class="sidenavposition">-->
 
 
