--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -123,7 +123,7 @@
   </mat-accordion>
   </div>
 </div>
-
+<div class="example-container1"></div>
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="side">
     <p>LIP FILLER RISKS AND SIDE EFFECTS</p>
