--- a/src/app/thirdsection/thirdsection.component.html
+++ b/src/app/thirdsection/thirdsection.component.html
@@ -2,7 +2,7 @@
 
   <!-- Centered link -->
   <div class="topnav-centered">
-    <a href="#home" class="active"><img src="assets/images/pure.jpeg" width="50" height="50" ></a>
+    <a href="#home" class="active"><img src="assets/icons/house.png"></a>
   </div>
 
   <!-- Left-aligned links (default) -->
