--- a/src/app/thirdsection/thirdsection.component.html
+++ b/src/app/thirdsection/thirdsection.component.html
@@ -2,7 +2,8 @@
 
   <!-- Centered link -->
   <div class="topnav-centered">
-    <a href="#home" class="active"><img src="assets/icons/house.png"></a>
+<!--    <a href="#home" class="active"><img src="assets/icons/house.png">Home</a>-->
+    <a href="#home" class="active"><img src="assets/images/pureathleticss.png" width="665" height="45" ></a>
   </div>
 
   <!-- Left-aligned links (default) -->
