--- a/src/app/thirdsection/thirdsection.component.css
+++ b/src/app/thirdsection/thirdsection.component.css
@@ -75,26 +75,23 @@ body {
   float: left;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 8px 11px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .topnav a:hover {
-  background-color: white;
+  background-color: #E6BB8E;
   color: black;
+
 }
 
-.topnav a.active {
-  background-color: white;
-  color: white;
-}
+
 
 .topnav-centered a {
-  float: none;
   position: fixed;
-  background-color: white;
-  left: 47%;
+  background-color: #E6BB8E;
+  left: 26.35%;
 }
 
 .topnav-right {
