--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -27,10 +27,10 @@
   <div class="navcenter">
 <!--        <ul>-->
           <!--                <li (click)="toHome()"><b><a href="#home">Start</a></b></li>-->
-    <li><a routerLink="/first-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
+    <li><a routerLink="/start-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
           <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
           <!--                <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">Über uns</a></b></li>-->
-          <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
+          <li><b><a routerLink="/referenzen-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
     <li><b><a href="#faq">LEISTUNGEN</a></b></li>
     <li><b><a routerLink="/secondsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a></b></li>
 
