--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -31,7 +31,8 @@
           <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
           <!--                <li><b><a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page">Über uns</a></b></li>-->
           <li><b><a routerLink="/referenzen-component"  routerLinkActive="active" ariaCurrentWhenActive="page">REFERENZEN</a></b></li>
-    <li><b><a href="#faq">LEISTUNGEN</a></b></li>
+<!--    <li><b><a href="#faq">LEISTUNGEN</a></b></li>-->
+    <li><b><a routerLink="/fithsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">LEISTUNGEN</a></b></li>
     <li><b><a routerLink="/secondsection-component"  routerLinkActive="active" ariaCurrentWhenActive="page">KONTAKFORMULAR</a></b></li>
 
 <!--          <li><b><a routerLink="/first-component"  routerLinkActive="active" ariaCurrentWhenActive="page">PATIENT EXPERIENCE</a></b></li>-->
