--- a/src/app/fifthsection/fifthsection.component.html
+++ b/src/app/fifthsection/fifthsection.component.html
@@ -1,5 +1,194 @@
-<div class="center">
-  <div class="my-google-map">
-    <google-map [width]="null" [height]="null" [options]="mapOptions"></google-map>
-  </div>
-</div>
+<!--<br>-->
+<!--<br>-->
+<!--&lt;!&ndash;<div class="firstLondon">&ndash;&gt;-->
+<!--<div class="backgroundcolor">-->
+<!--  &lt;!&ndash;  <div style="background-size: 2000px 1300px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}" >&ndash;&gt;-->
+<!--&lt;!&ndash;  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}" >&ndash;&gt;-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+
+
+<!--    &lt;!&ndash;    <h6>BEST LIP FILLERS</h6>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h6>IN LONDON</h6>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h3>MEDICAL AESTHETICS IN LONDON BY RUPESH SHAH</h3>&ndash;&gt;-->
+<!--    &lt;!&ndash;          <img src="assets/images/babas.png" width="100" height="100" >&ndash;&gt;-->
+<!--    &lt;!&ndash;      <h1 style="text-align:center">This is heading 1</h1>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h5 style="color:white;">ENTRÜMPELUNGEN IN BERLIN UND BRANDENBURG</h5>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <div class="boldclass">&ndash;&gt;-->
+<!--    &lt;!&ndash;      <h1><strong>BABAS</strong></h1>&ndash;&gt;-->
+<!--    &lt;!&ndash;      <h1><strong>DIENSTLEISTUNGEN</strong></h1>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </div>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h4  style="color:white;">Kostenlose Beratung und Transparente Festpreise</h4>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <br>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h4  style="color:white;">Blitzschnelle Ausführung in 24-48 Stunden nach Auftragsfreigabe</h4>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <br>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <h4  style="color:white;">Fachgerechte Entsorgung und besenreine Übergabe durch eigenes Team</h4>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <br>&ndash;&gt;-->
+<!--    &lt;!&ndash;    <section>&ndash;&gt;-->
+<!--    &lt;!&ndash;      <button mat-raised-button>MEHR ERFAHREN >></button>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </section>&ndash;&gt;-->
+
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;    <br>&ndash;&gt;-->
+<!--&lt;!&ndash;  </div>&ndash;&gt;-->
+<!--  &lt;!&ndash;</div>&ndash;&gt;-->
+<!--  <div class="body2">-->
+<!--    <div class="bodytext">-->
+<!--      <div class="alignleft">-->
+<!--        <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>-->
+<!--        <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>-->
+<!--        <p>-->
+<!--          Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your pout to perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic in Harley Street is the place to be seen (or not, should you prefer to opt for our ultra discrete at home VIP service).-->
+<!--        </p>-->
+<!--        <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent for creating impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous attention to detail combined with use of the very best lip filler products makes Rupesh the master of mouths!-->
+<!--        </p>-->
+<!--        <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen für eine Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie von uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.-->
+<!--        </p>-->
+<!--      </div>-->
+<!--      <div class="alignright">-->
+<!--        <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--          <br>-->
+<!--        </div>-->
+
+
+<!--      </div>-->
+<!--      <div class="centerbody">-->
+<!--        <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>-->
+<!--        <br>-->
+
+<!--        <img src="assets/images/woman.png" width="600" height="400">-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>-->
+<!--        <br>-->
+<!--        <p>-->
+<!--          All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.-->
+<!--        </p>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        <div class="naturalborder">-->
+<!--          <h2 class="colour1"> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>-->
+
+<!--          <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>-->
+<!--          <p>-->
+<!--            Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.-->
+<!--          </p>-->
+<!--          <h3 class="colour1"> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="body3">-->
+
+<!--        <div class="alignleft">-->
+<!--          <h2>-->
+
+<!--          </h2>-->
+<!--          &lt;!&ndash;      <img src="assets/icons/handshake.png" width="100" height="100" class="hover-1">&ndash;&gt;-->
+<!--          &lt;!&ndash;      <h3 class="hover-1">Entrümpelungen</h3>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <p>ANFRANGEN</p>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <img src="assets/icons/tractor.png" width="100" height="100" class="hover-1">&ndash;&gt;-->
+<!--          &lt;!&ndash;      <h3 class="hover-1">Gewerbeauflösung</h3>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <p>ANFRANGEN</p>&ndash;&gt;-->
+<!--        </div>-->
+<!--        <div class="alignright2">-->
+
+<!--          &lt;!&ndash;      <img src="assets/icons/open-door.png" width="100" height="100" class="hover-1">&ndash;&gt;-->
+<!--          &lt;!&ndash;      <h3>Zwangsräumung</h3>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <p>ANFRANGEN</p>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <img src="assets/icons/house.png" width="100" height="100" class="hover-1">&ndash;&gt;-->
+<!--          &lt;!&ndash;      <h3 class="hover-1">Haushaltsauflösungen</h3>&ndash;&gt;-->
+<!--          &lt;!&ndash;      <p>ANFRANGEN</p>&ndash;&gt;-->
+<!--        </div>-->
+<!--        &lt;!&ndash;    <div class="rightprogress">&ndash;&gt;-->
+<!--        &lt;!&ndash;    <mat-progress-bar mode="determinate" value="100"></mat-progress-bar>&ndash;&gt;-->
+<!--        &lt;!&ndash;    </div>&ndash;&gt;-->
+<!--      </div>-->
+<!--      <div class="body4">-->
+
+<!--        <div class="alignleft2">-->
+
+<!--          <img src="assets/images/female.png" width="600" height="400">-->
+<!--        </div>-->
+
+<!--        <div class="alignright3">-->
+<!--          <div class="bodytext2">-->
+<!--            <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>-->
+<!--            <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>-->
+<!--            <p>-->
+<!--              A prescriber, Member of the Royal Pharmaceutical Society and advanced aesthetics practitioner, Rupesh has spent the last 10 years focusing primarily on the care and wellbeing of his aesthetics patients, with lip fillers London being at the core of his attention. In this time he has crafted an enviable reputation as the greatest Lip Injector in London, and his strong celebrity following along with an International appeal for VIP patients is a testament to his expertise.-->
+<!--            </p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+      <div class="body5">
+
+        <div class="alignleft3">
+          <div class="bodytext2">
+            <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
+            <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
+            <p>Abhängig von der Größe der Wohnung oder des Hauses können die Kosten der Entrümpelung in Berlin erheblich variieren. Darüber hinaus muss auch der Größe und der Art der zu entsorgenden Möblierung Beachtung geschenkt werden, denn ein wichtiger Teil der Entrümpelung ist auch die Entsorgung der nicht mehr benötigten Gegenstände. Um Sie richtig über die Kosten zu informieren, erstellen wir Ihnen erst nach einer Vor-Ort Besichtigung die Rechnung. So können Sie sich sicher sein, dass unsere Preise für die Entrümpelung in Berlin stets transparent und somit nachvollziehbar sind. Noch Fragen? Gerne klären Sie unsere Fachberater über die Entrümpelung in Berlin auf und beraten Sie nach der Klärung aller offenen Fragen zu allen Entsorgungsfragen.</p>
+          </div>
+        </div>
+
+        <div class="alignright3">
+          <div class="my-google-map">
+            <google-map [width]="null" [height]="null" [options]="mapOptions"></google-map>
+          </div>
+        </div>
+      </div>
+      <div class="body6">
+
+        <div class="alignleft4">
+          <div class="bodytext3">
+            <h4>BABAS DIENSTLEISTUNGEN</h4>
+            <h2>Jetzt Kontakt aufnehmen!</h2>
+            <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
+            <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
+          </div>
+        </div>
+
+
+      </div>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
