--- a/src/app/secondsection/secondsection.component.html
+++ b/src/app/secondsection/secondsection.component.html
@@ -15,4 +15,21 @@
     <br>
     <h3> GERMANY </h3>
     <br>
+    <p>
+    Rupesh says, “People tend to love having more shapely,
+    </p>
+    <p>
+      voluminous, and well-defined lips.
+    </p>
+    <p>
+      We must make sure we don’t go overboard with the lip filler process.
+      </p>
+    <p>
+      So you might want to think about.
+    </p>
+
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
