--- a/src/app/headersection/headersection.component.html
+++ b/src/app/headersection/headersection.component.html
@@ -1,6 +1,6 @@
 <div class="topbar">
-  <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!"> <img src="assets/icons/whatsapp.png"></a>
-  <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
+<!--  <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!"> <img src="assets/icons/whatsapp.png"></a>-->
+<!--  <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>-->
   <div class="navcenter">
     <li><a routerLink="/start-component" routerLinkActive="active" ariaCurrentWhenActive="page">STARTSEITE</a></li>
     <li><b><a routerLink="/home-component"  routerLinkActive="active" ariaCurrentWhenActive="page">ÜBER UNS</a></b></li>
