--- a/src/app/thirdsection/thirdsection.component.html
+++ b/src/app/thirdsection/thirdsection.component.html
@@ -5,11 +5,11 @@
 <!--    <a href="#home" class="active"><img src="assets/icons/house.png">Home</a>-->
     <a href="#home" class="active"><img src="assets/images/pureathleticss.png" width="665" height="45" ></a>
   </div>
-
+<div class="leftlink">
   <!-- Left-aligned links (default) -->
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-
+  <a href="whatsapp://send?abid=phonenumber&text=Hello%2C%20World!"> <img src="assets/icons/whatsapp.png"></a>
+  <a href="mailto:myemailaddress@gmail.com"> <img src="assets/icons/email.png"> </a>
+</div>
   <!-- Right-aligned links -->
   <div class="topnav-right">
 <!--    <a href="#search">Search</a>-->
