--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,11 +21,14 @@
   <br>
   <p>Consultation available with Rupesh at our Harley Street Clinic in Central London.</p>
   <br>
+<!--  <div class="slide-left">-->
   <h3>LIP FILLERS – LONDON HARLEY STREET</h3>
+<!--  </div>-->
   <br>
   <img src="assets/images/boyali.png"  >
   <br>
   <div class="centertext">
+
   <p>Our Harley Street clinic is located in central London. Rupesh heads this clinic and is a highly specialised and experienced medical aesthetic practitioner who performs advanced lip augmentation injections using an advanced cannula technique on a regular basis.</p>
   <p>He has an interest in facial aesthetics, providing anti-wrinkle treatments and dermal fillers in his London private clinic.</p>
   <p>Rupesh Shah. Reg Number: 2048914</p>
