--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -53,15 +53,55 @@
 <div class="body2">
   <div class="bodytext">
     <div class="alignleft">
+
+
       <h2 class="colour1">THE HOME OF PERFECT LIPS.</h2>
+
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
+      <div class="slide-left">
       <p>
-        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your pout to perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic in Harley Street is the place to be seen (or not, should you prefer to opt for our ultra discrete at home VIP service).
+        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump your pout to
       </p>
-      <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent for creating impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous attention to detail combined with use of the very best lip filler products makes Rupesh the master of mouths!
+        <p>
+        perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic in Harley
+        </p>
+        <p>
+        Street is the place to be seen (or not, should you prefer to opt for our ultra discrete at home
+        </p>
+        <p>
+        VIP service).
       </p>
-      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen für eine Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie von uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
+<!--      </div>-->
+<!--      <div class="slide-right">-->
+      <p>  With a wealth of understanding and experience, Rupesh Shah has an unrivalled talent for creating
+        </p>
+        <p>
+        impossibly beautiful lips using only non-surgical techniques. His artistry and meticulous attention
+        </p>
+        <p>
+          to detail combined with use of the very best lip filler products makes Rupesh the master of
+        </p>
+        <p>
+          mouths!
       </p>
+      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot. Wir bieten Ihnen für eine
+      </p>
+        <p>
+        Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen. Als Kunden erwarten Sie von
+        </p>
+        <p>
+        uns als seriösem Dienstleister für die Wohnungsauflösung eine transparente Darstellung der
+        </p>
+        <p>
+        Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt. Wir berechnen einzelne
+        </p>
+        <p>
+        Positionen fair und basierend auf unseren Erfahrungswerten. Bei unserer Kalkulation kommt es
+        </p>
+        <p>
+        auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
+        </p>
+      </div>
     </div>
     <div class="alignright">
       <div style="background-size: 500px 500px;" [ngStyle]="{backgroundImage:'url(./assets/images/happy.png)'}" >
@@ -98,9 +138,17 @@
       <br>
       <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
       <br>
+      <div class="slide-left1">
       <p>
-        All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
+        All patients are unique, and as a medical prescriber in London with excellent anatomical understanding, he will listen to your
       </p>
+        <p>
+        objectives and can assess not just your lips, but your facial proportions as a whole, to advise on the most appropriate amount
+        </p>
+        <p>
+        of lip filler and where to apply this for maximum effect whilst maintaining natural looking lips.
+      </p>
+      </div>
 <br>
 <br>
 <br>
@@ -154,9 +202,32 @@
       <div class="bodytext2">
         <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
         <h2 class="colour1">EXPERTISE COUNTS FOR EVERYTHING.</h2>
+        <div class="slide-left2">
         <p>
-          A prescriber, Member of the Royal Pharmaceutical Society and advanced aesthetics practitioner, Rupesh has spent the last 10 years focusing primarily on the care and wellbeing of his aesthetics patients, with lip fillers London being at the core of his attention. In this time he has crafted an enviable reputation as the greatest Lip Injector in London, and his strong celebrity following along with an International appeal for VIP patients is a testament to his expertise.
+          A prescriber, Member of the Royal Pharmaceutical Society and
         </p>
+        <p>
+          advanced aesthetics practitioner, Rupesh has spent the last 10
+        </p>
+        <p>
+          years focusing primarily on the care and wellbeing of his
+        </p>
+        <p>
+          aesthetics patients, with lip fillers London being at the core of his
+        </p>
+        <p>
+          attention. In this time he has crafted an enviable reputation as the
+        </p>
+        <p>
+          greatest Lip Injector in London, and his strong celebrity following
+        </p>
+        <p>
+          along with an International appeal for VIP patients is a testament
+        </p>
+        <p>
+          to his expertise.
+        </p>
+        </div>
       </div>
     </div>
   </div>
@@ -180,11 +251,13 @@
 
     <div class="alignleft4">
       <div class="bodytext3">
+        <div class="hockerimg">
         <h4>BABAS DIENSTLEISTUNGEN</h4>
         <h2>Jetzt Kontakt aufnehmen!</h2>
         <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
         <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
-      </div>
+        </div>
+        </div>
     </div>
 
 
