--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -387,3 +387,42 @@ color:black;
 .birhtml {
   scroll-behavior: smooth;
 }
+div.slide-left {
+    width:100%;
+    overflow:hidden;
+  }
+  div.slide-left p {
+    animation: slide-left 10s;
+  }
+
+  @keyframes slide-left {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+
+div.slide-right {
+    width:100%;
+    overflow:hidden;
+  }
+  div.slide-right p {
+    animation: slide-left 10s;
+  }
+
+  @keyframes slide-right {
+    from {
+      margin-right: 100%;
+      width: 300%;
+    }
+
+    to {
+      margin-right: 0%;
+      width: 100%;
+    }
+  }
