--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -125,6 +125,10 @@
     </mat-expansion-panel>
   </mat-accordion>
   </div>
+
+<!--      <div class="zoom">-->
+<!--        <img src="assets/images/ruj.png" width="400" height="600">-->
+<!--      </div>-->
 </div>
 
 <div class="example-container1"></div>
