--- a/src/app/referenzen/referenzen.component.html
+++ b/src/app/referenzen/referenzen.component.html
@@ -2,6 +2,9 @@
 <div class="body2">
   <div class="bodytext">
     <div class="alignleft">
+      <div class="zoom">
+
+      </div>
       <img src="assets/images/ruj.png" width="400" height="600">
     </div>
     <div class="alignright">
@@ -11,6 +14,9 @@
 
       <button class="button button5">MEHR ERFAHREN</button>
     </div>
+<!--    <div class="zoom">-->
+<!--      <img src="assets/images/ruj.png" width="400" height="600">-->
+<!--    </div>-->
   </div>
 </div>
 
