--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -156,13 +156,16 @@
 <br>
 <br>
       <div class="naturalborder">
-      <h2 class="colour1"> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>
+<!--      <h2 class="colour2"> NATURAL LOOKING LIPS IN LONDON, WITH A LITTLE HELP..</h2>-->
 
       <h2 class="colour1"> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
-      <p>
+      <p class="colour2">
         Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
       </p>
       <h3 class="colour1"> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+        <p class="colour2">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        </p>
       </div>
     </div>
   <div class="body3">
@@ -262,6 +265,132 @@
 
 
   </div>
+
+<!--    <div class="body8">-->
+
+<!--      <div class="alignleft4">-->
+<!--        <div class="bodytext2">-->
+<!--          <div class="zoom">-->
+<!--            <img src="assets/images/aesthetic-1.jpg" width="250" height="375">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+
+
+<!--    </div>-->
+    <div class="body8">
+    <div class="alignright5">
+      <div class="zoom">
+        <img src="assets/images/aesthetic-1.jpg" width="250" height="375">
+      </div>
+    </div>
+    </div>
+
+    <div class="body8">
+      <div class="alignright6">
+        <div class="zoom">
+          <img src="assets/images/aesthetic-2.jpg" width="250" height="375">
+        </div>
+      </div>
+    </div>
+
+  <div class="body8">
+    <div class="alignright5">
+      <div class="zoom">
+        <img src="assets/images/aesthetic-3.jpg" width="250" height="375">
+      </div>
+    </div>
+  </div>
+
+    <div class="body9">
+      <div class="alignleft">
+        <img src="assets/icons/handshake.png" width="100" height="100" class="hover-1">
+        <h3 class="hover-1">Entrümpelungen</h3>
+        <p>ANFRANGEN</p>
+      </div>
+      <div class="alignright2">
+        <img src="assets/icons/cube.png" width="100" height="100" class="hover-1">
+        <h3 class="hover-1">Zw</h3>
+        <p>ANFRANGEN</p>
+      </div>
+    </div>
+
+<!--    <div class="body10">-->
+<!--      <div class="container2">-->
+<!--        <div class="alignright5">-->
+<!--        <img src="assets/images/hand1.jpg" alt="Avatar" class="image2" width="100" height="100">-->
+<!--        <div class="overlay2">-->
+<!--          <div class="text4">Lip Stick</div>-->
+<!--        </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--    <div class="body10">-->
+<!--      <div class="container2">-->
+<!--        <div class="alignright6">-->
+<!--        <img src="assets/images/happy.png" alt="Avatar" class="image2" width="100" height="100">-->
+<!--        <div class="overlay2">-->
+<!--          <div class="text4">Cosmetic</div>-->
+<!--        </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
+<!--    </div>-->
+
+<!--    <div class="body10">-->
+<!--      <div class="container2">-->
+<!--&lt;!&ndash;        <div class="alignright6">&ndash;&gt;-->
+<!--          <img src="assets/images/hand3.jpg" alt="Avatar" class="image2" width="100" height="100">-->
+<!--          <div class="overlay2">-->
+<!--            <div class="text4">Cosmetic2</div>-->
+<!--          </div>-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--      </div>-->
+<!--      &lt;!&ndash;      </div>&ndash;&gt;-->
+<!--    </div>-->
+
+<div class="body10">
+    <div class="row">
+      <div class="column">
+        <div class="container2">
+          <!--        <div class="alignright6">-->
+          <img src="assets/images/hand1.jpg" alt="Avatar" class="image2" style="width:170%">
+          <div class="overlay2">
+            <div class="text4">LIPSTICK</div>
+          </div>
+          <!--        </div>-->
+        </div>
+<!--        <img src="assets/images/hand1.jpg" alt="Snow" style="width:100%">-->
+      </div>
+      <div class="column">
+        <div class="container2">
+          <!--        <div class="alignright6">-->
+          <img src="assets/images/skincare1.jpg" alt="Avatar" class="image2" style="width:170%">
+          <div class="overlay2">
+            <div class="text4">SKINCARE</div>
+          </div>
+          <!--        </div>-->
+        </div>
+<!--        <img src="assets/images/hand1.jpg" alt="Forest" style="width:100%">-->
+      </div>
+      <div class="column">
+        <div class="container2">
+          <!--        <div class="alignright6">-->
+<!--          <img src="assets/images/hand3.jpg" alt="Avatar" class="image2" width="100" height="100">-->
+          <img src="assets/images/skincare.jpg" alt="Mountains" class="image2" style="width:170%">
+          <div class="overlay2">
+            <div class="text4">COSMETIC</div>
+          </div>
+          <!--        </div>-->
+        </div>
+<!--        <img src="assets/images/hand1.jpg" alt="Mountains" style="width:100%">-->
+      </div>
+    </div>
+</div>
+
+
 </div>
 </div>
 </div>
