--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -426,3 +426,15 @@ div.slide-right {
       width: 100%;
     }
   }
+
+.zoom {
+  padding: 5px;
+  transition: transform .10s; /* Animation */
+  width: 2px;
+  height: 4px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
