--- a/src/app/referenzen/referenzen.component.css
+++ b/src/app/referenzen/referenzen.component.css
@@ -68,3 +68,15 @@ float: left;
   cursor: pointer;
 }
 .button5 {background-color: #555555;} /* Black */
+
+.zoom {
+  padding: 5px;
+  transition: transform .10s; /* Animation */
+  width: 2px;
+  height: 4px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
